--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_01"
-author: "Math_116"
-date: "Fall semester"
+author: "Caitlyn Hense"
+date: "F3/20/25"
 output: html_document
 ---
 
